corpus/kernel/6.17/arch/index.md
---
collection: kernel
version: "6.17"
title: "CPU Architectures"
source_url: https://www.kernel.org/doc/html/v6.17/arch/index.html
fetched_at: 2026-09-16T16:17:50+00:00
---
English

- [Chinese (Simplified)](../translations/zh_CN/arch/index.md)
- [Chinese (Traditional)](../translations/zh_TW/arch/index.md)

# CPU Architectures

These books provide programming details about architecture-specific
implementation.

- [ARC architecture](arc/index.md)
  - [Linux kernel for ARC processors](arc/arc.md)
  - [Feature status on arc architecture](arc/features.md)
- [ARM Architecture](arm/index.md)
  - [ARM Linux 2.6 and upper](arm/arm.md)
  - [Booting ARM Linux](arm/booting.md)
  - [Cluster-wide Power-up/power-down race avoidance algorithm](arm/cluster-pm-race-avoidance.md)
  - [Interface for registering and calling firmware-specific operations for ARM](arm/firmware.md)
  - [Interrupts](arm/interrupts.md)
  - [Kernel mode NEON](arm/kernel_mode_neon.md)
  - [Kernel-provided User Helpers](arm/kernel_user_helpers.md)
  - [Kernel Memory Layout on ARM Linux](arm/memory.md)
  - [Memory alignment](arm/mem_alignment.md)
  - [ARM TCM (Tightly-Coupled Memory) handling in Linux](arm/tcm.md)
  - [Kernel initialisation parameters on ARM Linux](arm/setup.md)
  - [Software emulation of deprecated SWP instruction (CONFIG_SWP_EMULATE)](arm/swp_emulation.md)
  - [The Unified Extensible Firmware Interface (UEFI)](arm/uefi.md)
  - [vlocks for Bare-Metal Mutual Exclusion](arm/vlocks.md)
  - [Porting](arm/porting.md)
  - [Feature status on arm architecture](arm/features.md)
  - [SoC-specific documents](arm/index.md#soc-specific-documents)
- [ARM64 Architecture](arm64/index.md)
  - [ACPI Tables](arm64/acpi_object_usage.md)
  - [Activity Monitors Unit (AMU) extension in AArch64 Linux](arm64/amu.md)
  - [ACPI on Arm systems](arm64/arm-acpi.md)
  - [Arm Confidential Compute Architecture](arm64/arm-cca.md)
  - [Asymmetric 32-bit SoCs](arm64/asymmetric-32bit.md)
  - [Booting AArch64 Linux](arm64/booting.md)
  - [ARM64 CPU Feature Registers](arm64/cpu-feature-registers.md)
  - [CPU Hotplug and ACPI](arm64/cpu-hotplug.md)
  - [ARM64 ELF hwcaps](arm64/elf_hwcaps.md)
  - [Guarded Control Stack support for AArch64 Linux](arm64/gcs.md)
  - [HugeTLBpage on ARM64](arm64/hugetlbpage.md)
  - [crashkernel memory reservation on arm64](arm64/kdump.md)
  - [Legacy instructions](arm64/legacy_instructions.md)
  - [Memory Layout on AArch64 Linux](arm64/memory.md)
  - [Memory Tagging Extension (MTE) in AArch64 Linux](arm64/memory-tagging-extension.md)
  - [Memory copy/set instructions (MOPS)](arm64/mops.md)
  - [Perf](arm64/perf.md)
  - [Pointer authentication in AArch64 Linux](arm64/pointer-authentication.md)
  - [Kernel page table dump](arm64/ptdump.md)
  - [Silicon Errata and Software Workarounds](arm64/silicon-errata.md)
  - [Scalable Matrix Extension support for AArch64 Linux](arm64/sme.md)
  - [Scalable Vector Extension support for AArch64 Linux](arm64/sve.md)
  - [AArch64 TAGGED ADDRESS ABI](arm64/tagged-address-abi.md)
  - [Tagged virtual addresses in AArch64 Linux](arm64/tagged-pointers.md)
  - [Feature status on arm64 architecture](arm64/features.md)
- [LoongArch Architecture](loongarch/index.md)
  - [1. Introduction to LoongArch](loongarch/introduction.md)
  - [2. Booting Linux/LoongArch](loongarch/booting.md)
  - [3. IRQ chip model (hierarchy) of LoongArch](loongarch/irq-chip-model.md)
  - [4. Feature status on loongarch architecture](loongarch/features.md)
- [m68k Architecture](m68k/index.md)
  - [Command Line Options for Linux/m68k](m68k/kernel-options.md)
  - [Amiga Buddha and Catweasel IDE Driver](m68k/buddha-driver.md)
  - [Feature status on m68k architecture](m68k/features.md)
- [MIPS-specific Documentation](mips/index.md)
  - [1. BMIPS DeviceTree Booting](mips/booting.md)
  - [2. Ingenic JZ47xx SoCs Timer/Counter Unit hardware](mips/ingenic-tcu.md)
  - [3. Feature status on mips architecture](mips/features.md)
- [Nios II Specific Documentation](nios2/index.md)
  - [1. Linux on the Nios II architecture](nios2/nios2.md)
  - [2. Feature status on nios2 architecture](nios2/features.md)
- [OpenRISC Architecture](openrisc/index.md)
  - [OpenRISC Linux](openrisc/openrisc_port.md)
  - [TODO](openrisc/todo.md)
  - [Feature status on openrisc architecture](openrisc/features.md)
- [PA-RISC Architecture](parisc/index.md)
  - [PA-RISC Debugging](parisc/debugging.md)
  - [Register Usage for Linux/PA-RISC](parisc/registers.md)
  - [Feature status on parisc architecture](parisc/features.md)
- [powerpc](powerpc/index.md)
  - [NUMA resource associativity](powerpc/associativity.md)
  - [DeviceTree Booting](powerpc/booting.md)
  - [The PowerPC boot wrapper](powerpc/bootwrapper.md)
  - [CPU Families](powerpc/cpu_families.md)
  - [CPU Features](powerpc/cpu_features.md)
  - [DAWR issues on POWER9](powerpc/dawr-power9.md)
  - [DEXCR (Dynamic Execution Control Register)](powerpc/dexcr.md)
  - [DSCR (Data Stream Control Register)](powerpc/dscr.md)
  - [PCI Bus EEH Error Recovery](powerpc/eeh-pci-error-recovery.md)
  - [POWERPC ELF HWCAPs](powerpc/elf_hwcaps.md)
  - [ELF Note PowerPC Namespace](powerpc/elfnote.md)
  - [Firmware-Assisted Dump](powerpc/firmware-assisted-dump.md)
  - [HTM (Hardware Trace Macro)](powerpc/htm.md)
  - [HVCS IBM “Hypervisor Virtual Console Server” Installation Guide](powerpc/hvcs.md)
  - [IMC (In-Memory Collection Counters)](powerpc/imc.md)
  - [CPU to ISA Version Mapping](powerpc/isa-versions.md)
  - [KASLR for Freescale BookE32](powerpc/kaslr-booke32.md)
  - [Linux 2.6.x on MPC52xx family](powerpc/mpc52xx.md)
  - [Nested KVM on POWER](powerpc/kvm-nested.md)
  - [Hypercall Op-codes (hcalls)](powerpc/papr_hcalls.md)
  - [PCI Express I/O Virtualization Resource on Powerenv](powerpc/pci_iov_resource_on_powernv.md)
  - [PMU Event Based Branches](powerpc/pmu-ebb.md)
  - [Ptrace](powerpc/ptrace.md)
  - [Freescale QUICC Engine Firmware Uploading](powerpc/qe_firmware.md)
  - [Power Architecture 64-bit Linux system call ABI](powerpc/syscall64-abi.md)
  - [Transactional Memory support](powerpc/transactional_memory.md)
  - [Protected Execution Facility](powerpc/ultravisor.md)
  - [Virtual Accelerator Switchboard (VAS) userspace API](powerpc/vas-api.md)
  - [VCPU Dispatch Statistics](powerpc/vcpudispatch_stats.md)
  - [Device DAX](powerpc/vmemmap_dedup.md)
  - [Feature status on powerpc architecture](powerpc/features.md)
- [RISC-V architecture](riscv/index.md)
  - [ACPI on RISC-V](riscv/acpi.md)
  - [RISC-V Kernel Boot Requirements and Constraints](riscv/boot.md)
  - [Boot image header in RISC-V Linux](riscv/boot-image-header.md)
  - [Virtual Memory Layout on RISC-V Linux](riscv/vm-layout.md)
  - [RISC-V Hardware Probing Interface](riscv/hwprobe.md)
  - [arch/riscv maintenance guidelines for developers](riscv/patch-acceptance.md)
  - [RISC-V Linux User ABI](riscv/uabi.md)
  - [Vector Extension Support for RISC-V Linux](riscv/vector.md)
  - [Concurrent Modification and Execution of Instructions (CMODX) for RISC-V Linux](riscv/cmodx.md)
  - [Feature status on riscv architecture](riscv/features.md)
- [s390 Architecture](s390/index.md)
  - [Linux for S/390 and zSeries](s390/cds.md)
  - [IBM 3270 Display System support](s390/3270.md)
  - [S/390 driver model interfaces](s390/driver-model.md)
  - [Memory Management](s390/mm.md)
  - [Linux API for read access to z/VM Monitor Records](s390/monreader.md)
  - [IBM s390 QDIO Ethernet Driver](s390/qeth.md)
  - [S390 Debug Feature](s390/s390dbf.md)
  - [Adjunct Processor (AP) facility](s390/vfio-ap.md)
  - [VFIO AP Locks Overview](s390/vfio-ap-locking.md)
  - [vfio-ccw: the basic infrastructure](s390/vfio-ccw.md)
  - [The s390 SCSI dump tool (zfcpdump)](s390/zfcpdump.md)
  - [S/390 common I/O-Layer](s390/common_io.md)
  - [S/390 PCI](s390/pci.md)
  - [ibm 3270 changelog](s390/text_files.md)
  - [ibm 3270 config3270.sh](s390/text_files.md#ibm-3270-config3270-sh)
  - [Feature status on s390 architecture](s390/features.md)
- [SuperH Interfaces Guide](sh/index.md)
  - [DeviceTree Booting](sh/booting.md)
  - [Adding a new board to LinuxSH](sh/new-machine.md)
  - [Notes on register bank usage in the kernel](sh/register-banks.md)
  - [Feature status on sh architecture](sh/features.md)
  - [Memory Management](sh/index.md#memory-management)
  - [Machine Specific Interfaces](sh/index.md#machine-specific-interfaces)
  - [Busses](sh/index.md#busses)
- [Sparc Architecture](sparc/index.md)
  - [Steps for sending ‘break’ on sunhv console](sparc/console.md)
  - [Application Data Integrity (ADI)](sparc/adi.md)
  - [Oracle Data Analytics Accelerator (DAX)](sparc/oradax/oracle-dax.md)
  - [Feature status on sparc architecture](sparc/features.md)
- [x86-specific Documentation](x86/index.md)
  - [1. The Linux/x86 Boot Protocol](x86/boot.md)
  - [2. DeviceTree Booting](x86/booting-dt.md)
  - [3. x86 Feature Flags](x86/cpuinfo.md)
  - [4. x86 Topology](x86/topology.md)
  - [5. Kernel level exception handling](x86/exception-tables.md)
  - [6. Kernel Stacks](x86/kernel-stacks.md)
  - [7. Kernel Entries](x86/entry_64.md)
  - [8. Early Printk](x86/earlyprintk.md)
  - [9. ORC unwinder](x86/orc-unwinder.md)
  - [10. Zero Page](x86/zero-page.md)
  - [11. The TLB](x86/tlb.md)
  - [12. MTRR (Memory Type Range Register) control](x86/mtrr.md)
  - [13. PAT (Page Attribute Table)](x86/pat.md)
  - [14. Hardware-Feedback Interface for scheduling on Intel Hardware](x86/intel-hfi.md)
  - [15. Control-flow Enforcement Technology (CET) Shadow Stack](x86/shstk.md)
  - [16. x86 IOMMU Support](x86/iommu.md)
  - [17. Intel(R) TXT Overview](x86/intel_txt.md)
  - [18. Debugging AMD Zen systems](x86/amd-debugging.md)
  - [19. AMD Memory Encryption](x86/amd-memory-encryption.md)
  - [20. AMD HSMP interface](x86/amd_hsmp.md)
  - [21. Hardware Feedback Interface For Hetero Core Scheduling On AMD Platform](x86/amd-hfi.md)
  - [22. Intel Trust Domain Extensions (TDX)](x86/tdx.md)
  - [23. Page Table Isolation (PTI)](x86/pti.md)
  - [24. Microarchitectural Data Sampling (MDS) mitigation](x86/mds.md)
  - [25. The Linux Microcode Loader](x86/microcode.md)
  - [26. TSX Async Abort (TAA) mitigation](x86/tsx_async_abort.md)
  - [27. Bus lock detection and handling](x86/buslock.md)
  - [28. USB Legacy support](x86/usb-legacy-support.md)
  - [29. i386 Support](x86/i386/index.md)
  - [30. x86_64 Support](x86/x86_64/index.md)
  - [31. In-Field Scan](x86/ifs.md)
  - [32. Shared Virtual Addressing (SVA) with ENQCMD](x86/sva.md)
  - [33. Software Guard eXtensions (SGX)](x86/sgx.md)
  - [34. Feature status on x86 architecture](x86/features.md)
  - [35. x86-specific ELF Auxiliary Vectors](x86/elf_auxvec.md)
  - [36. Using XSTATE features in user space applications](x86/xstate.md)
- [Xtensa Architecture](xtensa/index.md)
  - [Atomic Operation Control (ATOMCTL) Register](xtensa/atomctl.md)
  - [Passing boot parameters to the kernel](xtensa/booting.md)
  - [MMUv3 initialization sequence](xtensa/mmu.md)
  - [Feature status on xtensa architecture](xtensa/features.md)
